Added Topic Mapping and CSS styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#aboutMe">About</a></li>
             <li><a href="#section-3">Purpose</a></li>
-           <li><a href="mailto:agutierrez27@bucs.fsw.ed"><i class="fa fa-envelope" style="font-size:20px"></i></li>
+            <li><a href="#topicMapping">Topic Mapping</a></li>
+           <li><a href="mailto:agutierrez27@bucs.fsw.edu"><i class="fa fa-envelope" style="font-size:20px"></i></li>
            <li><a href="https://www.linkedin.com/in/armando-gutierrez-931068196/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:20px"></i></a></li>
 
         </ul>
@@ -33,16 +34,16 @@
         </div>
         <div class="right">
           <div class="section-1-box">
-            <img src="images/IMG_2418 2.JPG" alt="" />
+            <img id="topic" src="images/IMG_2418 2.JPG" alt="Topic Mapping" />
           </div>
         </div>
       </div>
     </section>
     <section id="aboutMe" class="section-2">
       <div class="column">
-        <h1>About Me</h1>
+        <h1 class="toLeft">About Me</h1>
         <div class="flex">
-          <p id="aboutPara">Hello, my name is Armando Gutierrez, and I’m a driven software engineering student with a passion for technology, innovation, and problem-solving. Currently pursuing a degree in Computer Science after I complete my AA at FSW, I’m working toward becoming a skilled full-stack engineer with a focus on creating impactful and user-friendly digital solutions My journey has included extensive training in web development, cybersecurity, and embedded systems, as I aim to build a well-rounded skill set in the tech industry.</p>
+          <p id="aboutPara">Hello, my name is Armando Gutierrez, and I’m a driven software engineering student with a passion for technology, innovation, and problem-solving. Currently, I am pursuing a degree in Software Engineering after I complete my AA at FSW, I’m working toward becoming a skilled full-stack engineer with a focus on creating impactful and user-friendly digital solutions My journey has included extensive training in web development, cybersecurity, and embedded systems, as I aim to build a well-rounded skill set in the tech industry.</p>
           <div id="aboutPara"><p> I’m committed to continuous learning and have completed projects that combine analytical thinking with creative design. Outside of coding, I bring my experience as a personal trainer into everything I do by embracing discipline, adaptability, and teamwork. I aspire to leverage my technical expertise to contribute to groundbreaking projects and make a positive impact in the world.</p></div>
           </div>
           <div class="aboutImages">
@@ -57,12 +58,12 @@
     </section>
     <section id="section-3">
       <div class="section-3-container">
-        <h1>Why am I here?</h1>
+        <h1 class="purpose">Why am I here?</h1>
         <p>
             The rapid rise of artificial intelligence in recent years has sparked countless discussions about how it will shape our future—our jobs, relationships, ethics, and even our understanding of happiness. For me, this course represents an opportunity to delve into the intersection of two concepts that are profoundly shaping my journey: the pursuit of happiness and the transformational power of technology.
         </p>
 
-        <p>As someone immersed in the study of software engineering, full-stack development, and cybersecurity, I’m deeply fascinated by the way technology can both empower and challenge humanity. AI, in particular, holds immense promise, but it also raises crucial questions:</p>
+        <p>As someone immersed in the study of software engineering, full-stack development, and cybersecurity, I’m deeply fascinated by the way technology can both empower and challenge humanity. AI, in particular, holds immense promise, but it also raises <span id="styleUnder">crucial questions:</span></p>
         <p style="font-weight:bold;" >Will AI get so good at doing mundane task, allowing us to solve more complex problems and advance technology even further?</p> 
             <p style="font-weight:bold;" >How will AI reshape our perceptions of what it means to live a fulfilling life?</p> 
             <p style="font-weight:bold;">Can AI enhance our pursuit of happiness, or will it distort our understanding of joy, connection, and purpose? </p>
@@ -81,7 +82,16 @@
        
       </div>
     </section>
-    <section class="section-4">
+    <section id="topicMapping" class="section-4 column">
+    <div class="topicMap column">
+      <h1>Topic Mapping: </h1>
+    <img class="topic" src="images/topicMapping.JPG" alt="">
+    <p><i class="fa fa-windows" style="font-size:24px"></i> Use 'Ctrl' and '+' to Zoom into Map.</p>
+    <p><i class="fa fa-apple" style="font-size:24px"></i> Use 'Cmd' and '+" to Zoom into Map.</p>
+
+    </div>
+    </section>
+    <section class="section-5">
       <div class="cta-container">
         <div class="cta-text">
           <h1>Fun Fact: This website was entirely made using code.</h1>
