--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <section id="topicMapping" class="section-4 column">
     <div class="topicMap column">
       <h1>Topic Mapping: </h1>
-    <img class="topic" src="images/topicMapping.JPG" alt="">
+    <img class="topic" src="images/topicMapping2.jpg" alt="">
     <p><i class="fa fa-windows" style="font-size:24px"></i> Use 'Ctrl' and '+' to Zoom into Map.</p>
     <p><i class="fa fa-apple" style="font-size:24px"></i> Use 'Cmd' and '+" to Zoom into Map.</p>
 
